--- a/sharp/SamHaXePanel/SamHaXePanel.csproj
+++ b/sharp/SamHaXePanel/SamHaXePanel.csproj
@@ -60,6 +60,17 @@
   </Target>
   -->
   <ItemGroup>
+    <Reference Include="Aga, Version=1.7.0.0, Culture=neutral, PublicKeyToken=fcc90fbf924463a3, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\FlashDevelop\Bin\Debug\Aga.dll</HintPath>
+    </Reference>
+    <Reference Include="AS2Context, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="ASCompletion, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="FlashConnect, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="SwfOp, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\FlashDevelop\Bin\Debug\SwfOp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -69,6 +80,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.XML" />
+    <Reference Include="XMLCompletion, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dialogs\AddResourceDialog.cs">
@@ -133,6 +145,14 @@
       <Name>PluginCore</Name>
       <Private>False</Private>
     </ProjectReference>
+    <ProjectReference Include="..\AS3Context\AS3Context.csproj">
+      <Project>{0263E5F6-D5B2-4118-B12E-87F9A74DE8AF}</Project>
+      <Name>AS3Context</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FlashViewer\FlashViewer.csproj">
+      <Project>{3E8B5548-D3AB-44CD-8C1D-D828540D49C9}</Project>
+      <Name>FlashViewer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ProjectManager\ProjectManager.csproj">
       <Project>{78101C01-E186-4954-B1DD-DEBB7905FAD8}</Project>
       <Name>ProjectManager</Name>
@@ -143,5 +163,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\SamIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MP3Player.swf" />
   </ItemGroup>
 </Project>
