--- a/sharp/SamHaXePanel/SamHaXePanel.csproj
+++ b/sharp/SamHaXePanel/SamHaXePanel.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Dialogs\AddResourceDialog.Designer.cs">
       <DependentUpon>AddResourceDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\CreateResourcesFile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\CreateResourcesFile.Designer.cs">
+      <DependentUpon>CreateResourcesFile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\SamProjectConfigDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,10 @@
   <ItemGroup>
     <EmbeddedResource Include="Dialogs\AddResourceDialog.resx">
       <DependentUpon>AddResourceDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\CreateResourcesFile.resx">
+      <DependentUpon>CreateResourcesFile.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\SamProjectConfigDialog.resx">
