--- a/sharp/SamHaXePanel/SamHaXePanel.csproj
+++ b/sharp/SamHaXePanel/SamHaXePanel.csproj
@@ -83,11 +83,11 @@
     <Reference Include="XMLCompletion, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dialogs\AddResourceDialog.cs">
+    <Compile Include="Dialogs\AddFontDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Dialogs\AddResourceDialog.Designer.cs">
-      <DependentUpon>AddResourceDialog.cs</DependentUpon>
+    <Compile Include="Dialogs\AddFontDialog.Designer.cs">
+      <DependentUpon>AddFontDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\CreateResourcesFile.cs">
       <SubType>Form</SubType>
@@ -120,8 +120,8 @@
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Dialogs\AddResourceDialog.resx">
-      <DependentUpon>AddResourceDialog.cs</DependentUpon>
+    <EmbeddedResource Include="Dialogs\AddFontDialog.resx">
+      <DependentUpon>AddFontDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\CreateResourcesFile.resx">
