--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,4 +1,4 @@
-﻿<project name="E4XU build and test" default="index">
+﻿<project name="E4XU build and test" default="e4xuSWC">
 	<!--!!!!!!!!!!!!!!!!!!! IMPORTANT !!!!!!!!!!!!!!!!!!!!!!!!-->
 	<!-- Increase Java heap memory to avoid getting out-of memory error (example) -->
 	<!-- ANT_OPTS=-Xmx5120M -->
@@ -9,23 +9,23 @@
 	
 	<!-- load properties file -->
 	<property file="${basedir}/build.properties" />
-	<property name="FLEX_HOME" value="C:\off-trunk" /><!-- C:/sdks/trunk -->
 	
 	<!-- points to our flexTasks.jar we copied to the libs folder to distribute with the project -->
 	<taskdef resource="flexTasks.tasks" classpath="${basedir}/tasks/flexTasks.jar"/> 
 	
 	<!-- Get our revision counter -->
-	<target name="rev">
-	  <exec executable="${SVN_DIR}/subWCRev.exe">
+	<!-- This uses some very old API. Will need to update this to use svn info. -->
+	<!--target name="rev">
+	  <exec executable="${SVN_EXE}">
 		<arg value="${basedir}"/>
 		<arg value="${basedir}/revision.build"/>
 		<arg value="${basedir}/revision.properties"/>
 	  </exec>
 	  <property file="${basedir}/revision.properties" />
-	</target>
+	</target-->
 	
 	<!-- delete and recreate the DEPLOY dir -->
-	<target name="init" depends="rev">
+	<target name="init">
 		<delete dir="${DEPLOY_DIR}" />
 		<delete>
 			<fileset dir="${LIBS_DIR}" includes="**/*.swc"/>
@@ -60,7 +60,7 @@
 	
 	<!-- Build e4xu.swc -->
 	<target name="e4xuSWC" depends="frameworkSWC">
-		<compc output="${LIBS_DIR}/e4xu${TODAY}-${RV}.swc" 
+		<compc output="${LIBS_DIR}/e4xu${TODAY}.swc" 
 			keep-generated-actionscript="true"
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
@@ -78,22 +78,23 @@
 	
 	<!-- Build skins.swc -->
 	<target name="skinsSWC" depends="e4xuSWC">
-		<compc output="${LIBS_DIR}/skins/skins${TODAY}-${RV}.swc" 
+		<compc output="${LIBS_DIR}/skins/skins${TODAY}.swc" 
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-skins.xml"/>
 	        <source-path path-element="${FLEX_HOME}/frameworks"/>
 	        <source-path path-element="${SRC_DIR}"/>
 	        <external-library-path dir="${LIBS_DIR}">
-				<include name="e4xu${TODAY}-${RV}.swc"/>
+			<include name="e4xu${TODAY}.swc"/>
 	        </external-library-path>
-			<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10.0">
-				<include name="playerglobal.swc"/>
+		<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10.0">
+			<include name="playerglobal.swc"/>
 	        </external-library-path>
 		</compc>
 	</target>
 	
 	<!-- Build test (index.swf) -->
+	<!-- Not building it atm. Need to build libraries against standard MXMLC w/o our test -->
 	<target name="index" depends="skinsSWC">
 		<mxmlc file="${SRC_DIR}/view/SecondFrame.mxml" 
 				output="${DEPLOY_DIR}/index${TODAY}.swf"
